# awstail

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/: release.yml
.github/workflows/: release.yml
ci/: before_deploy.sh
src/: cmd.rs  funcs.rs  main.rs  util.rs
