[package]
name = "awstail"
version = "0.2.1"
authors = ["Yoandy Rodriguez <yoandy.rmartinez@gmail.com>"]
edition = '2018'
[dependencies]
rusoto_core = {version = "0.42.0", default_features = false, features=["rustls"]}
rusoto_logs = {version = "0.42.0", default_features = false, features=["rustls"]}
rusoto_credential ="0.42.0"
clap = "2.32.0"
chrono ="0.4.6"
humantime = "1.1.1"
console ="0.6.2"
ctrlc = "3.1.3"
