[package]
name = "awstail"
version = "0.6.7"
authors = ["Yoandy Rodriguez <yoandy.rmartinez@gmail.com>"]
edition = '2018'
homepage = "https://github.com/yorodm/awstail"
repository = "https://github.com/yorodm/awstail"
description = "Like `tail -f` for AWS Logs"
readme = "README.md"
categories = ["command-line-utilities"]
license-file="LICENSE.md"
[dependencies]
rusoto_core = {version = "0.45.0", default_features = false, features=["rustls"]}
rusoto_logs = {version = "0.45.0", default_features = false, features=["rustls"]}
rusoto_credential ="0.45.0"
gumdrop = "0.8"
chrono ="0.4.6"
humantime = "1.1.1"
console ="0.12"
ctrlc = "3.1.3"
log = "0.4"
env_logger = "0.8.1"
futures = "0.3"
tokio = { version = "0.2.22", features = ["macros"] }
futures-util = "0.3.5"
anyhow = "1.0"
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
